Correction of products slider that was cut off at high resolution

--- a/assets/sass/sections/_products.scss
+++ b/assets/sass/sections/_products.scss
@@ -136,6 +136,11 @@
                 width: auto;
                 }
             }
+
+            @include breakpoint-xl {
+                height: 500px;
+            }
+
         }
 
         &__slides {
